--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script type='text/javascript' src='bundle.js'></script>
   </head>
   <body>
-    <div id='snake'>hi!<div>
+    <div id='snake'><div>
   </body>
 </html>
